--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ nav li a {
 }
 
 .fondo-buscador {
-    background-color: #02736895;
+    background-color: #027368eb;
     color: #ffffff;
 
 }
@@ -153,15 +153,28 @@ h3 {
     left: 40%;
 }
 
-.descuento:hover {
-    color: #04ADBF;
+.descuento span{
+   position:relative;
+   display: flex;
+   justify-content: center;
+   margin-top: 0.5rem;
+  
+   
+}
+
+span .btn-success{
+    background-color:#D91438;
+    border: none;
+}
+
+.btn-success:hover {
+    color: #d6e0e1 important;
 }
 
 .ahora {
     color: #F26444;
     font-weight: 700;
 }
-
 
 
 
@@ -180,9 +193,8 @@ footer {
     background-color: #08364A;
     color: #ffffff;
     display: flex;
-    justify-content: space-evenly;
-    height: 15rem;
-    margin-top: 1.5rem;
+    justify-content: space-evenly;    
+    margin-top: 1.8rem;
 
 }
 
@@ -191,14 +203,19 @@ footer {
     color: #ffffff;
 }
 
+
+.list-unstyled a{text-decoration:underline;
+color: #ffffff;
+}
+
 /****************************buscador de actividaddes index******************/
 
 
 
 .disfruta {
     font-weight: 900;
-    font-family: montserrat;
     color: #fa5604;
+    font-family: "Seymour One", sans-serif;
     font-size: 2.2rem;
 }
 
@@ -213,7 +230,9 @@ h2 {
 }
 
 
-
+.nosotros{
+padding: 5rem;
+}
 
 .form-contacto {
     background-color: #027368;
@@ -326,8 +345,7 @@ aside .card-title{
 }
 
 
-.navbar .container-fluid{
-    background-color: #000000;
+.navbar .container-fluid{    
     display: flex;
     justify-content: space-around;
 }
@@ -359,8 +377,7 @@ aside .card-title{
     }
 
 
-    .navbar .container-fluid{
-        background-color: #c81414;
+    .navbar .container-fluid{    
         display: flex;
         justify-content: space-around;
     }
