--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,34 +1,6 @@
 
-
-
-/*16.5 Contact Form Button*/
-.send-btn {
-	text-align: center;
-	margin-top: 80px
-}
-
-.buscador input {
-    border-radius: 0.3rem !important;
-    .fondo-buscador {
-        background-color: #027368eb;
-        color: #ffffff;
-    
-    }
-    
-   
-    
-    .fondo-buscador {
-        background-color: #027368eb;
-        color: #ffffff;
-    
-    }
-
-    .newsletter{
-  
-        padding-top: 0 !important;
-        
-    }
-
-    
-
+.btn-outline-success{
+    background-color: #03676e;
+    color: #ffffff;
+    border-radius: 5px;
 }
