--- a/scss/mediaqueries/media-mobile.scss
+++ b/scss/mediaqueries/media-mobile.scss
@@ -1,7 +1,7 @@
 /*********************************************Mediaqueries********************************************/
 
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (max-width: 767px) {
 
 
     .navbar {
@@ -12,13 +12,13 @@
 
 
     .title {
-        font-size: 1.2rem !important;     
+        font-size: 1rem !important;     
 
     }
 
 
     .logo {
-        width: 60%;
+        width: 6rem;
 
     }
 
@@ -34,6 +34,11 @@
     }
 
   
+}
+
+.background-video{
+    height: 50%;
+
 }
 
 
