--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,5 +1,23 @@
-@mixin card-title{
-    color:#ffffff;
-    background-color: none !important;
+@mixin estilo-footer{
+    background-color: #08364A;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;   
+    align-items: center; 
+    margin-top: 1.8rem;
 }
 
+@mixin estilo-redes{
+    display: flex;  
+    align-items: center;
+    justify-content: space-around;   
+    text-decoration: none;
+    list-style: none !important;  
+    padding-left: 0;
+    .btn{
+        width: 5.5rem;
+      
+    
+}
+
+}
