--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -7,8 +7,7 @@ main {
     }
 
     .bienvenido {
-        color: #e8f4f4;
-        font-size: 3rem;
+        color: #e8f4f4;       
         font-family: "Seymour One", sans-serif;
         position: absolute;
         /* Posiciona el texto de forma absoluta dentro del contenedor */
@@ -57,7 +56,7 @@ main {
                 justify-content: center;
                 margin-top: 0.5rem;
 
-                button{
+                button {
                     z-index: 1000;
                 }
 
@@ -76,10 +75,21 @@ main {
         }
     }
 
-    .background_video{
+    .background_video {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         z-index: -100;
-    
+        width: 100%;
+
+        video {
+            flex-grow: 1;
+            width: 100% !important;
+            
+        }
     }
+
+
 
 }
 
