--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,6 @@
+
+
+
 header {
 
 
@@ -7,6 +10,8 @@ header {
         background-color: #08364ac5;
         display: flex;
         align-items: center;
+
+       
 
         ul {
             list-style: none;
@@ -19,6 +24,34 @@ header {
             }
         }
     }
+
+    /*
+    lupa {
+        position: relative;
+      
+        &__form {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 0;
+          opacity: 0;
+          transition: all 0.3s ease-in-out;
+      
+          &:hover {
+            width: 150px;
+            opacity: 1;
+          }
+        }
+      }*/
+
+    .navbar-toggler-icon{
+        background-color: #ffffff;
+        color:#ffffff;
+        margin-right: 1rem  !important;
+     
+    }
+
+    
 
     .nav-link {
         position: relative;
@@ -43,3 +76,5 @@ header {
         }
     }
 }
+
+
