--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,4 +1,12 @@
-$primary-button-color:#027368eb;
+$primary-button-color:#027368eb; //color butttons
 
-$principal-color:background-color #08364A;
+$principal-color:background-color #08364A; //background header y footer
+
+
+$background-body: #eee8f4;  //background body
+
 $text-color: #eb5d20;
+
+
+
+$font-primary:"Mukta", sans-serif;
