--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,10 +1,15 @@
 
+
+//esta es la tipografia que elegí de google fonts.
 .seymour-one-regular {
     font-family: "Seymour One", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
+
+//esta es la tipografia de p
 .p{
     font-family: Arial, Helvetica, sans-serif;
 }
+
