--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,6 +1,8 @@
+// estilos botón y buscador principal
 
 .btn-outline-success{
     background-color: #03676e;
     color: #ffffff;
     border-radius: 5px;
 }
+
