--- a/scss/mediaqueries/media-mobile.scss
+++ b/scss/mediaqueries/media-mobile.scss
@@ -1,30 +1,128 @@
 /*********************************************Mediaqueries********************************************/
-
+@import"../layout/footer";
 
 @media (max-width: 768px) {
 
 
-main{
 
-position: absolute;
-    .bienvenido { 
-        background-color: blueviolet;
-        position: absolute;        
-        font-size: 1.2rem !important;
-       padding: auto;
+
+    //index
+    body {
+ .wrapper{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    header {
+        display: flex;
+        justify-content: space-between;
+        .navbar {          
+         
+            .navbar-brand {
+
+                text-align: center;
+                padding: 0 10px;
+
+
+                .logo {
+                    height: 50%;
+                    margin: 0 auto;
+                }
+
+            }
+
+          
+
+        }
+
+        /*ver despues como oculto solo el buscador y pongo icono lupa
+        .d-flex {
+            display: none !important;
+        }
+        */
     }
 
-.descubri{
-   margin-top: 1rem !important;
-    font-size: 0.8rem !important;
-    background-color: aqua;
-}
+    main {
 
+        .texto-bienvenida{
+                top:17%;
 
-}
-
+            .bienvenido {                
+                font-size: 1rem !important;
+                padding: auto;
+            }
     
+            .descubri {
+                margin-top: 1rem !important;
+                font-size: 0.8rem !important;
+                top: 30%;
+    
+            }
+    
+    
+            .descuento {
+                top: 35% !important;
+             
+    
+                p {
+                    font-size: 0.5rem;
+                }
+
+                span{
+
+                    button{
+                        .btn-danger{
+                 
+                  background-color:#040746 !important;
+                 }
+                 }
+              
+
+                }
+
+             
+    
+            }
+        }
+
+
       
+    }
+
+
+    section {
+        .disfruta {
+            font-size: 1.2rem;
+        }
+
+
+        .fs-5 {
+            font-size: 0.8rem !important;
+        }
+
+        p {
+            font-size: 0.6rem;            
+            text-align: center;
+            justify-self: flex-start;
+        }
+
+        .card {
+            align-items: center;
+
+            img {
+                width: 60%;
+            }
+
+            .card-body {
+                width: 60%;
+            }
+        }
+    }
+
+
+
+}
+
+ }
 
 
 
@@ -32,6 +130,8 @@ position: absolute;
 
 
 
+
+    // destinos
     .seccion_principal {
 
         .seccion_principal {
@@ -78,4 +178,46 @@ position: absolute;
     aside {
         text-align: center;
     }
+}
+
+//footer
+
+footer{
+    display: block;
+    justify-content: center;
+    .container{
+        display: flex;
+        justify-content: center;
+        .row{
+
+            .col{
+                .navbar-brand{
+                    margin-right: 0;
+                    .logo{
+                        width:50%;
+                        background-color: cornflowerblue;
+                    }
+                   } 
+            }
+
+            .col{
+                .text-center{
+                    font-size: 0.3rem !important;
+                }
+            }
+        }
+      
+    }
+   
+   
+}
+
+
+@media (max-width: 320px) {
+
+
+
+
+
+
 }
