--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -6,43 +6,45 @@ main {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
+   .texto-bienvenida{
+    position: absolute;
+    text-align: center;
+    width: 50%;
+    left:50%; 
+    top:40%;     
+    transform: translate(-50%, -50%);/* Centra el texto horizontal y verticalmente */
+
+
     .bienvenido {
-        color: #e8f4f4;       
-        font-family: "Seymour One", sans-serif;
-        position: absolute;
-        /* Posiciona el texto de forma absoluta dentro del contenedor */
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /* Centra el texto horizontal y verticalmente */
+        color: #e8f4f4;  
+        font-family: "Seymour One", sans-serif;                 
         padding: 10px;
     }
 
     h3 {
         font-weight: 700;
         color: #e8f4f4;
+     
     }
 
     .descubri {
-        color: #ffffff;
+        color: #ffffff;   
         font-weight: 300;
         font-size: 1.6rem;
-        position: absolute;
+        position: relative;
         /* Posiciona el texto de forma absoluta dentro del contenedor */
-        top: 35%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /* Centra el texto horizontal y verticalmente */
+       
     }
 
 
 
-    .descuento {
-
-        position: absolute;
+    .descuento {           
+        position: relative;
         /* Posiciona el texto de forma absoluta dentro del contenedor */
-        top: 40%;
-        left: 40%;
+        top: 40%;       
+        z-index: 500;
+
+        
 
         p {
             color: #ffffff;
@@ -75,6 +77,9 @@ main {
         }
     }
 
+   }
+
+  
     .background_video {
         display: flex;
         justify-content: center;
@@ -95,11 +100,24 @@ main {
 
 
 
-section {
-    .disfruta {
-        text-align: center;
-        font-size: 2rem;
-        color: #fa5604;
+
+
+    section {
+
+        .container-fluid{
+            background-color: black;
+        }
+
+
+        .disfruta {
+            text-align: center;
+            font-size: 2rem;
+            color: #fa5604;
+        }
+    
+    
+    
+    
     }
 
-}
+
