--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,7 +1,9 @@
 
 //Estilos galeria de fotos 
 
-
+.card{
+    background-color: #ffffff;
+}
 .card{
     //fondo tarjeta
  transition: transform 0.5s;
