--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -3,7 +3,7 @@ $primary-button-color:#027368eb; //color butttons
 $principal-color:background-color #08364A; //background header y footer
 
 
-$background-body: #eee8f4;  //background body
+$background-body: #fafafa;  //background body
 
 $text-color: #eb5d20;
 
