--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -104,9 +104,9 @@ main {
 
     section {
 
-        .container-fluid{
-            background-color: black;
-        }
+   
+   
+     
 
 
         .disfruta {
@@ -116,7 +116,13 @@ main {
         }
     
     
-    
+
+            h4{
+                color: #9ebb10;  
+        }
+       
+        
+
     
     }
 
